# Agentic-Rag

./: .gitignore  README.md  app.py  config.json  main.py  pyproject.toml  question.json
agent/: manager.py
agents/: __init__.py  assistant_agent.py  base_agent.py  manager_agent.py
chunkers/: __init__.py  base_chunker.py  hierarchical_chunker.py  semantic_chunker.py
chunking/: hierarchical.py  layoutchunking.py  semanticchunking.py
core/: __init__.py  component_registry.py
core/config/: __init__.py  base_config.py
core/factories/: __init__.py  agent_factory.py  chunker_factory.py  parser_factory.py  vector_store_factory.py
core/interfaces/: __init__.py  agent_interface.py  chunker_interface.py  parser_interface.py  vector_store_interface.py
orchestrator/: __init__.py  rag_orchestrator.py
parser/doclingParser/: docling_ocr.py  docllingparser.py  granite.py
parsers/: __init__.py  base_parser.py  docling_parser.py
prompt/: assistant.md  manager.md
util/: cache_util.py  generatesummary.py
vector_stores/: __init__.py  base_vector_store.py  qdrant_store.py
vectordb/: customvectorQdrantVectorStore.py  qudrantprse.py
